--- a/2_1.5
+++ b/2_1.5
@@ -24,3 +24,31 @@ public class MyClass
         
     }
 }
+
+
+public class MyClass 
+{
+    public static void main(String args[]) 
+    {
+        int arrayA[] = { 8, 36, 44};
+        int arrayB[] = { 2, 32, 16};
+        int sum[] = new int[3];
+        int n, p;
+        double m;
+        
+        for(int i=0; i< arrayA.length; i++)
+        {
+            sum[i] = arrayA[i] + arrayB[i];
+            System.out.println(sum[i]);
+            n = sum[i];
+            for(int j=0; m<1; j++)
+            {
+                m = n / Math.pow(2,j);
+                System.out.println(Math.pow(10,j));
+
+            }
+        }
+        
+    }
+}
+
